--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
-    <title>Em desenvolvimento</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
+    <title>Alura Books</title>
 </head>
 <body>
     <header class="cabecalho">
@@ -48,5 +50,67 @@
         <p class="banner_texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Novos Lançamentos</h2>
+        <!-- Slider main container -->
+        <div class="swiper">
+            <!-- Additional required wrapper -->
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+        
+            <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="#"></div>
+            <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="#"></div>
+            <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="#"></div>
+            <div class="swiper-slide"><img src="img/Javascript.svg" alt="#"></div>
+            <div class="swiper-slide"><img src="img/Liderança.svg" alt="#"></div>
+            ...
+            </div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+
+        <div class="card">
+            <!--1º Linha-->
+            <div class="card__descricao">
+                <!--1º Coluna-->
+                <div class="descricao">
+                    <h3 class="descricao__titulo">Talvez você tambem se interesse por...</h3>
+                    <h2 class="descricao__titulo-livro">Anular 11 e Firebase</h2>
+                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                </div>
+                <!--2º Coluna-->
+                <img src="img/Angular.svg" alt="" class="descricao__imagem">
+            </div>
+
+            <!--2º Linha-->
+            <div class="card__botoes">
+                <!--1º Coluna-->
+                <ul class="botoes">
+                    <li class="botoes__item"><img src="img/Favoritos.svg" alt="#"></li>
+                    <li class="botoes__item"><img src="img/Sacola.svg" alt="#"></li>
+                </ul>
+                <!--2º Coluna-->
+                <a href="#" class="botoes__ancora">Saiba mais</a>
+            </div>
+        </div>
+    </section>
+
+    <script
+     src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js">
+    </script>
+
+    <script>
+        const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,
+            pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets',
+            },
+        });
+    </script>
 </body>
 </html>
